--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1525,3 +1525,9 @@ body {
   .column-header {
     position: relative; /* Torna o container um contêiner de posicionamento para elementos filhos absolutos */
 }
+  _
+ / \
+ | |
+ | |
+ | |
+(___)
